--- a/packages/atomic-ui-js/css/modules/material-design/button.css
+++ b/packages/atomic-ui-js/css/modules/material-design/button.css
@@ -1,20 +1,20 @@
 /**
  * Setup `x-ripple` element for animations.
  */
-:where(.x-button, .x-btn),
-:where(.x-button, .x-btn) > *:not(x-ripple) {
+.x-btn,
+.x-btn > *:not(x-ripple) {
   position: relative;
 }
 
-:where(.x-button, .x-btn) > *:not(x-ripple) {
+.x-btn > *:not(x-ripple) {
   z-index: 3;
 }
 
-:where(.x-button, .x-btn) > x-ripple {
+.x-btn > x-ripple {
   z-index: 1;
 }
 
-:where(.x-button, .x-btn):not(.x-outlined) {
+.x-btn:not(.x-outlined) {
   border: none;
 }
 
@@ -22,62 +22,62 @@
  * Padding adjustments (top, and bottom) for 'outlined' button variant.
  */
  /** For small size **/
-:where(.x-button, .x-btn).x-outlined.x-small {
+.x-btn.x-outlined.x-small {
   padding: calc(var(--x-3px) - var(--x-border-width)) var(--x-3px);
 }
 
 /** For medium size **/
-:where(.x-button, .x-btn).x-outlined:is(
+.x-btn.x-outlined:is(
   :not(.x-small, .x-dense, .x-large), .x-normal
 ),
-:where(.x-button, .x-btn).x-outlined.x-dense {
+.x-btn.x-outlined.x-dense {
   padding: calc(var(--x-8px) - var(--x-border-width)) var(--x-8px);
 }
 
 /** For large size **/
-:where(.x-button, .x-btn).x-outlined.x-large {
+.x-btn.x-outlined.x-large {
   padding: calc(var(--x-12px) - var(--x-border-width)) var(--x-12px);
 }
 
 /**
  * Not "Filled" variant base
  * ------------------- */
-:where(.x-button, .x-btn):not(.x-filled) {
+.x-btn:not(.x-filled) {
   background: transparent;
   color: var(--x-color-5);
 }
 
-:where(.x-button, .x-btn):not(.x-filled):hover {
+.x-btn:not(.x-filled):hover {
   color: var(--x-color-4);
 }
 
-:where(.x-button, .x-btn):not(.x-filled):has(> [rippleactive]),
-:where(.x-button, .x-btn):not(.x-filled):active {
+.x-btn:not(.x-filled):has(> [rippleactive]),
+.x-btn:not(.x-filled):active {
   color: var(--x-color-3);
 }
 
 /** Ripple styles **/
-:where(.x-button, .x-btn):not(.x-filled) x-ripple::after,
-:where(.x-button, .x-btn):not(.x-filled) x-ripple::before {
+.x-btn:not(.x-filled) x-ripple::after,
+.x-btn:not(.x-filled) x-ripple::before {
   background: var(--x-color-7);
 }
 
 @media (prefers-color-scheme: dark) {
-  :where(.x-button, .x-btn):not(.x-filled) {
+  .x-btn:not(.x-filled) {
     color: var(--x-color-6);
   }
 
-  :where(.x-button, .x-btn):not(.x-filled):hover {
+  .x-btn:not(.x-filled):hover {
     color: var(--x-color-7);
   }
 
-  :where(.x-button, .x-btn):not(.x-filled):has(> [rippleactive]),
-  :where(.x-button, .x-btn):not(.x-filled):active {
+  .x-btn:not(.x-filled):has(> [rippleactive]),
+  .x-btn:not(.x-filled):active {
     color: var(--x-color-8);
   }
 
-  :where(.x-button, .x-btn):not(.x-filled) x-ripple::after,
-  :where(.x-button, .x-btn):not(.x-filled) x-ripple::before {
+  .x-btn:not(.x-filled) x-ripple::after,
+  .x-btn:not(.x-filled) x-ripple::before {
     --x-ripple-hover-opacity: 0.55;
     --x-ripple-active-opacity: 0.13;
   }
@@ -86,7 +86,7 @@
 /**
  * Disabled
  */
-:where(.x-button, .x-btn):disabled {
+.x-btn:disabled {
   pointer-events: none;
   opacity: 0.34;
 }
@@ -103,21 +103,21 @@
  * Filled
  * -------------------- */
 /** Ripple styles **/
-:where(.x-button, .x-btn).x-filled x-ripple::after,
-:where(.x-button, .x-btn).x-filled x-ripple::before {
+.x-btn.x-filled x-ripple::after,
+.x-btn.x-filled x-ripple::before {
   --x-ripple-hover-opacity: 0.55;
   --x-ripple-active-opacity: 0.21;
 
   background: var(--x-color-12);
 }
 
-:where(.x-button, .x-btn).x-filled {
+.x-btn.x-filled {
   background-color: var(--x-color-5);
   border-color: var(--x-color-5);
   color: var(--x-color-12);
 }
 
-:where(.x-button, .x-btn).x-filled:focus-visible {
+.x-btn.x-filled:focus-visible {
   --x-focus-ring-color: var(--x-color-3);
 
   border-color: var(--x-color-3);
@@ -126,6 +126,6 @@
 /*
  * Outlined
  * -------------------- */
-:where(.x-button, .x-btn).x-outlined {
+.x-btn.x-outlined {
   border-color: var(--x-color-4);
 }
